Update install stylesheets & gem/app - Front&Back

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+
+ // Graphical variables
+@import "config/fonts";
+@import "config/colors";
+
+// Your CSS partials
+@import "components/index";
+@import "pages/index";
