--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,73 @@
 <h1>Home page</h1>
 <div class="container">
   <div class="banner">
-    <div class="cv-photo">
-    <img src="./app/assets/images/Nicolas-Fornaro-photo_profil.jpg" alt="photo-profil"></div>
-  </div>
-
-  <div class="cv">
-    <div class="cv-part">
+    <div class="cv-photo"><img src="./app/assets/images/Nicolas-Fornaro-photo_profil.jpg" alt="photo-profil"></div>
+    <div class="description">
+      <h2>Pleins de motivation et communicant, je souhaite vous prouver que je peux être un plus pour vos projets digitaux.</h2>
     </div>
   </div>
 
-  <div class="projetcs">
+
+
+  <div class="cv">
+    <div class="cv-part">
+      <div class="image-part">
+        <img src="" alt="">
+      </div>
+
+      <div class="skills">
+        <h2>Soft skills</h2>
+        <ul>
+          <li>Communication</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+        </ul>
+      </div>
+      <div class="skills">
+        <h2>Hard skills</h2>
+        <ul>
+          <li>Communication</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+          <li>Ouvert d'esprit</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="cv-part">
+
+      <h2>Expériences</h2>
+
+      <div class="exp">
+        <div class="exp-description">
+          <img src="" alt="">
+          <div>
+            <h4>Entreprise</h4>
+            <p>descriptif de l'entreprise, intitulé ....</p>
+          </div>
+        </div>
+        <div class="exp-infos">
+          <ul>
+            <li>mission 1</li>
+            <li>mission 1</li>
+            <li>mission 1</li>
+            <li>mission 1</li>
+            <li>mission 1</li>
+            <li>mission 1</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  <div class="projects">
   </div>
 </div>
