Footer structure html V1

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,70 @@
-<h1>footer</h1>
+<footer aria-label="Site Footer" class="">
+  <div class="">
+    <div class="">
+      <a
+        class=""
+        href="#MainContent"
+      >
+        <span class="">Back to top</span>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-5 h-5"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </a>
+    </div>
+
+    <div class="">
+      <div>
+        <div class="">
+          <img src="" alt="logo">
+        </div>
+
+        <p
+          class=""
+        >
+          CV Nicolas Fornaro<br>
+          Marseille <br>
+          France <br>
+          nicolasfornaro75@gmail.com
+        </p>
+      </div>
+
+      <nav aria-label="Footer Nav" class="">
+        <ul
+          class=""
+        >
+          <li>
+            <a href=""></a>
+          </li>
+
+          <li>
+            <a href=""></a>
+          </li>
+
+          <li>
+            <a href=""></a>
+          </li>
+
+          <li>
+            <a href=""></a>
+          </li>
+
+        </ul>
+      </nav>
+    </div>
+
+    <p class="">
+      Copyright &copy; 2023. <br>
+      Design & Développement : Studio Fornaro
+    </p>
+  </div>
+</footer>
