Gem+Tailwindcss+baseHtml

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,73 +1,35 @@
-<h1>Home page</h1>
-<div class="container">
-  <div class="banner">
-    <div class="cv-photo"><img src="./app/assets/images/Nicolas-Fornaro-photo_profil.jpg" alt="photo-profil"></div>
-    <div class="description">
-      <h2>Pleins de motivation et communicant, je souhaite vous prouver que je peux être un plus pour vos projets digitaux.</h2>
-    </div>
-  </div>
 
+<section id="main-banner" class="h-screen relative bg-[url(https://images.unsplash.com/photo-1511376777868-611b54f68947?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)] bg-cover bg-right bg-no-repeat flex flex-col justify-center">
+    <div
+    class="absolute inset-0 sm:z-0 bg-black/60 sm:bg-transparent sm:bg-gradient-to-r sm:from-black/60 sm:to-black/60"
+  ></div>
 
+  <div
+    class="relative max-w-screen-xl px-4 py-32 mx-auto sm:z-10 lg:flex lg:h-screen lg:items-center">
+    <div class="max-w-xl mx-auto text-center">
+      <h1 class="text-4xl sm:text-6xl font-extrabold text-white drop-shadow">
+        Nicolas
+      </h1>
 
-  <div class="cv">
-    <div class="cv-part">
-      <div class="image-part">
-        <img src="" alt="">
-      </div>
+      <p class="mt-4 text-white text-lg sm:text-2xl leading-relaxed shadow">
+        Un restaurant évocateur de souvenirs pour en créer de nouveaux.
+      </p>
 
-      <div class="skills">
-        <h2>Soft skills</h2>
-        <ul>
-          <li>Communication</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-        </ul>
-      </div>
-      <div class="skills">
-        <h2>Hard skills</h2>
-        <ul>
-          <li>Communication</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-          <li>Ouvert d'esprit</li>
-        </ul>
+      <div class="flex flex-wrap justify-center gap-4 mt-8">
       </div>
     </div>
-
-    <div class="cv-part">
-
-      <h2>Expériences</h2>
-
-      <div class="exp">
-        <div class="exp-description">
-          <img src="" alt="">
-          <div>
-            <h4>Entreprise</h4>
-            <p>descriptif de l'entreprise, intitulé ....</p>
-          </div>
-        </div>
-        <div class="exp-infos">
-          <ul>
-            <li>mission 1</li>
-            <li>mission 1</li>
-            <li>mission 1</li>
-            <li>mission 1</li>
-            <li>mission 1</li>
-            <li>mission 1</li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
   </div>
+</section>
 
 
+<section id="skills">
+</section>
 
-  <div class="projects">
-  </div>
-</div>
+<section id="projects">
+</section>
+
+<section id="experiences">
+</section>
+
+<section id="contact">
+</section>
