--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,50 +1,50 @@
-// Position NavBar
-.nav-sticky {
-  position: sticky;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 20;
-}
+// // Position NavBar
+// .nav-sticky {
+//   position: sticky;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 20;
+// }
 
 
 
-// Style (size, color ...)
-.nav-style {
-  background-color: rgba(0, 0, 0, 0.535);
-  width: 100%;
-  height: 20vh;
-  padding: 4vh 4vw 4vh 4vw;
-}
+// // Style (size, color ...)
+// .nav-style {
+//   background-color: rgba(0, 0, 0, 0.535);
+//   width: 100%;
+//   height: 20vh;
+//   padding: 4vh 4vw 4vh 4vw;
+// }
 
 
 
-// Menu
-.nav-menu {
-  align-items: center;
-}
+// // Menu
+// .nav-menu {
+//   align-items: center;
+// }
 
-.nav-menu-list {
-  display: flex;
-  list-style: none;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 16px;
-  margin: 0;
+// .nav-menu-list {
+//   display: flex;
+//   list-style: none;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: space-between;
+//   padding: 16px;
+//   margin: 0;
 
-  font-family: $headers-font;
-  font-size: 4rem;
-  font-weight: 900;
-  color: white;
+//   font-family: $headers-font;
+//   font-size: 4rem;
+//   font-weight: 900;
+//   color: white;
 
 
-  li {
-    padding: 0 20px;
-  }
-}
+//   li {
+//     padding: 0 20px;
+//   }
+// }
 
-// Button Nav
-.nav-button {
+// // Button Nav
+// .nav-button {
 
-}
+// }
