add small changes home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,13 +22,33 @@
 </section>
 
 
-<section id="skills">
+<section id="skills" class="">
+  <div class="picto-dev-skill">
+  </div>
+  <div class="personal-skill">
+    <div class="list-soft-skill">
+      <ul>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+      </ul>
+    </div>
+    <div class="list-hard-skill">
+      <ul>
+        <li>Skill</li>
+        <li>Skill</li>
+        <li>Skill</li>
+      </ul>
+    </div>
+  </div>
 </section>
 
 <section id="projects">
+
 </section>
 
 <section id="experiences">
+
 </section>
 
 <section id="contact">
