Optimize home page with render

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,55 +1,10 @@
 
-<section id="main-banner" class="h-screen relative bg-[url(https://images.unsplash.com/photo-1511376777868-611b54f68947?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)] bg-cover bg-right bg-no-repeat flex flex-col justify-center">
-    <div
-    class="absolute inset-0 sm:z-0 bg-black/60 sm:bg-transparent sm:bg-gradient-to-r sm:from-black/60 sm:to-black/60"
-  ></div>
+<%= render 'banner' %>
 
-  <div
-    class="relative max-w-screen-xl px-4 py-32 mx-auto sm:z-10 lg:flex lg:h-screen lg:items-center">
-    <div class="max-w-xl mx-auto text-center">
-      <h1 class="text-4xl sm:text-6xl font-extrabold text-white drop-shadow">
-        Nicolas
-      </h1>
+<%= render 'skills' %>
 
-      <p class="mt-4 text-white text-lg sm:text-2xl leading-relaxed shadow">
-        Un restaurant évocateur de souvenirs pour en créer de nouveaux.
-      </p>
+<%= render 'projects' %>
 
-      <div class="flex flex-wrap justify-center gap-4 mt-8">
-      </div>
-    </div>
-  </div>
-</section>
+<%= render 'experiences' %>
 
-
-<section id="skills" class="">
-  <div class="picto-dev-skill">
-  </div>
-  <div class="personal-skill">
-    <div class="list-soft-skill">
-      <ul>
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Skill</li>
-      </ul>
-    </div>
-    <div class="list-hard-skill">
-      <ul>
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Skill</li>
-      </ul>
-    </div>
-  </div>
-</section>
-
-<section id="projects">
-
-</section>
-
-<section id="experiences">
-
-</section>
-
-<section id="contact">
-</section>
+<%= render 'contact' %>
