Add information & structure

--- a/app/views/pages/home/_skills.html.erb
+++ b/app/views/pages/home/_skills.html.erb
@@ -4,16 +4,22 @@
   <div class="personal-skill">
     <div class="list-soft-skill">
       <ul>
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Skill</li>
+        <li>L'envie d'apprendre</li>
+        <li>Communiquant</li>
+        <li>Ouvert d'esprit</li>
+        <li>L'Esprit d'équipe</li>
+        <li>La Créativité</li>
+        <li>L'empathie</li>
       </ul>
     </div>
     <div class="list-hard-skill">
       <ul>
-        <li>Skill</li>
-        <li>Skill</li>
-        <li>Skill</li>
+        <li>Le Travail d'équipe</li>
+        <li>La Communication</li>
+        <li>Microsoft Office</li>
+        <li>Les Techniques de vente</li>
+        <li>La Gestion de projets</li>
+        <li>La Gestion du changement</li>
       </ul>
     </div>
   </div>
