Render fixed + add infos + add ext tw-elements

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 
-<%= render 'banner' %>
+<%= render 'pages/home/banner' %>
 
-<%= render 'skills' %>
+<%= render 'pages/home/skills' %>
 
-<%= render 'projects' %>
+<%= render 'pages/home/projects' %>
 
-<%= render 'experiences' %>
+<%= render 'pages/home/experiences' %>
 
-<%= render 'contact' %>
+<%= render 'pages/home/contact' %>
