Add class and structure

--- a/app/views/pages/home/_banner.html.erb
+++ b/app/views/pages/home/_banner.html.erb
@@ -15,6 +15,7 @@
       </p>
 
       <div class="flex flex-wrap justify-center gap-4 mt-8">
+      <button>Contact</button>
       </div>
     </div>
   </div>
