--- a/app/views/pages/home/_experiences.html.erb
+++ b/app/views/pages/home/_experiences.html.erb
@@ -1,8 +1,13 @@
-<section id="experiences">
+<section id="experiences" class="">
   <div class="formations">
+    <ul>
+      <li></li>
+    </ul>
   </div>
 
   <div class="work">
+    <ul>
+      <li></li>
+    </ul>
   </div>
-
 </section>
