add list div img dev skills

--- a/app/views/pages/home/_skills.html.erb
+++ b/app/views/pages/home/_skills.html.erb
@@ -1,5 +1,24 @@
 <section id="skills" class="">
   <div class="picto-dev-skill">
+    <div class="">
+      <img class="" src="" alt="">
+      <h2 class=""></h2>
+    </div>
+
+    <div class="">
+      <img class="" src="" alt="">
+      <h2 class=""></h2>
+    </div>
+
+    <div class="">
+      <img class="" src="" alt="">
+      <h2 class=""></h2>
+    </div>
+
+    <div class="">
+      <img class="" src="" alt="">
+      <h2 class=""></h2>
+    </div>
   </div>
   <div class="personal-skill">
     <div class="list-soft-skill">
