Add Infos formations

--- a/app/views/pages/home/_experiences.html.erb
+++ b/app/views/pages/home/_experiences.html.erb
@@ -1,13 +1,18 @@
 <section id="experiences" class="">
   <div class="formations">
     <ul>
-      <li></li>
+      <li>Le Wagon, Développement Web - fin 2022</li>
+      <li>Master Marketing Digital ebusiness, ISC Paris - 2020</li>
+      <li>Bachelor - 2017</li>
+      <li>Baccaloréat, STG Mercatique - 2012</li>
+      <li>Kaplan, Oxford - 2013</li>
     </ul>
   </div>
 
   <div class="work">
     <ul>
-      <li></li>
+      <li>Stage, intitulé - Date</li>
+      <li>missions : intitulés</li>
     </ul>
   </div>
 </section>
