--- a/app/views/pages/home/_skills.html.erb
+++ b/app/views/pages/home/_skills.html.erb
@@ -2,22 +2,22 @@
   <div class="picto-dev-skill">
     <div class="">
       <img class="" src="" alt="">
-      <h2 class=""></h2>
+      <h2 class="">Ruby</h2>
     </div>
 
     <div class="">
       <img class="" src="" alt="">
-      <h2 class=""></h2>
+      <h2 class="">Javascript</h2>
     </div>
 
     <div class="">
       <img class="" src="" alt="">
-      <h2 class=""></h2>
+      <h2 class="">Scss</h2>
     </div>
 
     <div class="">
       <img class="" src="" alt="">
-      <h2 class=""></h2>
+      <h2 class="">Git</h2>
     </div>
   </div>
   <div class="personal-skill">
