Add presentation render

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
 
 <%= render 'pages/home/banner' %>
 
+<%= render 'pages/home/hello' %>
+
 <%= render 'pages/home/skills' %>
 
 <%= render 'pages/home/projects' %>
