add TWcss and some structure

--- a/app/views/pages/home/_banner.html.erb
+++ b/app/views/pages/home/_banner.html.erb
@@ -7,16 +7,20 @@
     class="relative max-w-screen-xl px-4 py-32 mx-auto sm:z-10 lg:flex lg:h-screen lg:items-center">
     <div class="max-w-xl mx-auto text-center">
       <h1 class="text-4xl sm:text-6xl font-extrabold text-white drop-shadow">
-        Nicolas
+        Nicolas Fornaro
       </h1>
 
       <p class="mt-4 text-white text-lg sm:text-2xl leading-relaxed shadow">
-        Un restaurant évocateur de souvenirs pour en créer de nouveaux.
+        👨‍💻 Développeur web Full Stack junior à votre service
       </p>
 
       <div class="flex flex-wrap justify-center gap-4 mt-8">
-      <button>Contact</button>
+      <button class="text-white text-lg sm:text-2xl leading-relaxed shadow bg-sky-600 px-6 py-2 rounded-md">Contact</button>
       </div>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/nicolas-fornaro/"><i></i></a></li>
+        <li><a href="https://www.linkedin.com/in/nicolas-fornaro/"><i></i></a></li>
+      </ul>
     </div>
   </div>
 </section>
