--- a/app/views/pages/home/_hello.html.erb
+++ b/app/views/pages/home/_hello.html.erb
@@ -1,4 +1,3 @@
-Présentation de Nicolas Fornaro
 <img src="" alt="">
-<h2></h2>
+<h2 class="text-xl font-bold bg-red-600 ">Présentation de Nicolas Fornaro</h2>
 <p>Texte descriptif</p>
