--- a/app/views/pages/home/_banner.html.erb
+++ b/app/views/pages/home/_banner.html.erb
@@ -17,10 +17,12 @@
       <div class="flex flex-wrap justify-center gap-4 mt-8">
       <button class="text-white text-lg sm:text-2xl leading-relaxed shadow bg-sky-600 px-6 py-2 rounded-md">Contact</button>
       </div>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/nicolas-fornaro/"><i></i></a></li>
-        <li><a href="https://www.linkedin.com/in/nicolas-fornaro/"><i></i></a></li>
-      </ul>
+      <div class="container">
+        <ul class="flex flex-row m-1">
+          <li class="mr-1 px-4 py-1 rounded-md bg-slate-500 hover:bg-slate-300"><a href="https://www.linkedin.com/in/nicolas-fornaro/" class="text-2xl text-blue-900"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          <li class="px-4 py-1 rounded-md bg-slate-500 hover:bg-slate-300"><a href="https://www.linkedin.com/in/nicolas-fornaro/" class="text-2xl text-blue-900"><i class="fa-brands fa-linkedin-in"></i></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
